--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "react-tsparticles": "^1.37.6",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "CI=false && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
